# DataBUS_SISAL

./: .gitignore  CITATION.cff  README.md  chronology_equivalents.csv  clean_template.csv  pyproject.toml  requirements.txt  sisal_tempate.csv
data/: sisal_entity_5.csv
man/: denormalize_sisal.sql  speleothem_tables.html  speleothem_tables.pdf.md  speleothem_tables.qmd
man/speleothem_tables_files/libs/bootstrap/: bootstrap.min.css
src/: clean_data.py  data_upload.py  remove_cu.py  template_validate.py  unitList_SISALv3.xlsx
src/data_export/: README.md  contact_upload.py  export_by_entity.py  export_by_site.py
src/data_export/sql/: wide_export.sql
src/templates/: sisal_tempate.csv  sisal_tempate.xlsx  sisal_template.xlsx  template.yml
