[project]
name = "databus-sisal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databus",
    "numpy>=1.25",
    "pandas>=2.0.2",
    "psycopg>=3.2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
databus = { git = "https://github.com/NeotomaDB/DataBUS" }
